# raylib-chess

./: CMakeLists.txt  build_output.txt  main.c
include/: chess.h  render.h
src/: chess.c  render.c
